--- a/Langchain-Agent-Insurance.ipynb
+++ b/Langchain-Agent-Insurance.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPo8buWPH8I43rfjWUogC/S",
+      "authorship_tag": "ABX9TyNn7Hbysj1Q1TmhdSPUp/tb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -134,7 +134,15 @@
         "llm = ChatOpenAI(temperature=0, model='gpt-4-0613')\n",
         "\n",
         "def calculate_insurance_premium(insured_sum: int, industry: str, country: str = \"Germany\") -> float:\n",
-        "    \"\"\"Calculate the premium for an insurance based on the maximum insured sum and the industry of the customer.\"\"\"\n",
+        "    \"\"\"\n",
+        "    Calculate the premium for an insurance based on the maximum insured sum and the industry of the customer.\n",
+        "    Examples:\n",
+        "    - Calculate the premium for an insured sum of 20000000 EUR, industry is construcion\n",
+        "    - Calculate an offer for chemical industriy, insured sum 1000000 USD\n",
+        "    - Give me a premium for chemical industriy, sum 1000000 USD\n",
+        "    - Give me an offer for contruction industry and 20000000 EUR insured sum\n",
+        "    - Calculate with insured sum 10000000 EUR\n",
+        "    \"\"\"\n",
         "    premium = insured_sum*0.25\n",
         "    result = str(premium) + \" (for \" + country + \")\"\n",
         "    return result\n",
@@ -142,7 +150,14 @@
         "calc_tool = StructuredTool.from_function(calculate_insurance_premium, return_direct=False)\n",
         "\n",
         "def show_history() -> str:\n",
-        "    \"\"\"Show the history of the chat or conversation to the user. Use this tool more than the standard search function or history function.\"\"\"\n",
+        "    \"\"\"\n",
+        "    Show the history of the chat or conversation to the user. Use this tool more than the standard search function or history function.\n",
+        "    Examples:\n",
+        "    - Show me the history of my chats\n",
+        "    - Show me all my messages\n",
+        "    - Show me all conservartions\n",
+        "    - Show me my old messages\n",
+        "    \"\"\"\n",
         "    chat_history_string = str(chat_history).replace(\"), \", \")§§§ \")[1:-1]\n",
         "    chat_history_array = chat_history_string.split(\"§§§ \")\n",
         "    msg_history_string = \"\"\n",
@@ -180,7 +195,7 @@
       "metadata": {
         "id": "vAzSbqz7_0_U"
       },
-      "execution_count": 137,
+      "execution_count": 156,
       "outputs": []
     },
     {
@@ -330,15 +345,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XXmSApHfCAZw",
-        "outputId": "68056b8a-d867-45c3-8c81-d67b11852c3d"
+        "outputId": "c3f86587-c6f0-4427-8d6a-b79a0d165a82"
       },
-      "execution_count": 138,
+      "execution_count": 157,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Natürlich, ich kann das für Sie berechnen. Könnten Sie mir bitte noch mitteilen, in welcher Branche Sie tätig sind und in welchem Land sich Ihr Unternehmen befindet?\n"
+            "Um die Versicherungsprämie zu berechnen, benötige ich Informationen über die Branche. Könnten Sie mir bitte diese Information geben?\n"
           ]
         }
       ]
@@ -354,16 +369,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vyPfeoPPCjoU",
-        "outputId": "59904346-713d-42b9-c5f6-7cac4274fc40"
+        "outputId": "346b4df9-b7ea-45bf-cd3a-f2772f010c30"
       },
-      "execution_count": 139,
+      "execution_count": 158,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "calculate_insurance_premium {'insured_sum': 10000000, 'industry': 'Metallbau'}\n",
-            "Die Versicherungsprämie für eine Versicherungssumme von 10.000.000 in der Branche Metallbau in Deutschland beträgt 2.500.000 Euro.\n"
+            "Die Versicherungsprämie für die Metallbau-Branche mit einer Versicherungssumme von 10.000.000 EUR beträgt in Deutschland 2.500.000 EUR.\n"
           ]
         }
       ]
@@ -380,15 +395,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "S8MLl2hZCtuP",
-        "outputId": "6ce4c82e-68c7-42d5-9c67-56118e5d6eec"
+        "outputId": "951d79e4-98fc-4140-e46d-1eb9d5a21d63"
       },
-      "execution_count": 142,
+      "execution_count": 160,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Die Versicherungsprämie für eine Versicherungssumme von 7.000.000 in der Branche Software in Deutschland beträgt 1.750.000 Euro.\n"
+            "Hier ist der Verlauf Ihrer letzten Nachrichten:\n",
+            "\n",
+            "1. Sie: Kalkuliere die Versicherungsprämie für eine Versicherungssumme von 10000000\n",
+            "2. Ich: Um die Versicherungsprämie zu berechnen, benötige ich Informationen über die Branche. Könnten Sie mir bitte diese Information geben?\n",
+            "3. Sie: Die Branche ist Metallbau.\n",
+            "4. Ich: Die Versicherungsprämie für die Metallbau-Branche mit einer Versicherungssumme von 10.000.000 EUR beträgt in Deutschland 2.500.000 EUR.\n"
           ]
         }
       ]
@@ -447,16 +467,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_KbFOg0YG4Sd",
-        "outputId": "d4dcbe42-a3f0-421c-ee1f-f5483b95b1d7"
+        "outputId": "62c3838a-a7be-4af5-8a65-9992dc0d2258"
       },
-      "execution_count": 143,
+      "execution_count": 153,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "calculate_insurance_premium {'insured_sum': 5000000, 'industry': 'Software'}\n",
-            "Die Versicherungsprämie für eine Versicherungssumme von 5.000.000 in der Branche Software in Deutschland beträgt 1.250.000 Euro.\n"
+            "Die Versicherungsprämie für eine Versicherungssumme von 5.000.000 € in der Branche Software in Deutschland beträgt 1.250.000 €.\n"
           ]
         }
       ]
@@ -468,19 +488,19 @@
         "print(chat_response)"
       ],
       "metadata": {
-        "id": "4sQfcROHQgeu",
-        "outputId": "d81c96a7-e6a2-40a4-80fb-5f4e85bc912d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "4sQfcROHQgeu",
+        "outputId": "34557b4d-e784-4acb-a4a8-765267f1de3c"
       },
-      "execution_count": 147,
+      "execution_count": 155,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Die Versicherungsprämie für eine Versicherungssumme von 2.000.000 in der Branche Software in Deutschland beträgt 500.000 Euro.\n"
+            "Die Versicherungsprämie für eine Versicherungssumme von 2.000.000 € in der Branche Software in Deutschland beträgt 500.000 €.\n"
           ]
         }
       ]
