--- a/Langchain-Agent-Insurance.ipynb
+++ b/Langchain-Agent-Insurance.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNn7Hbysj1Q1TmhdSPUp/tb",
+      "authorship_tag": "ABX9TyM5F/vu4wBNqvA3FuxLF7EO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -149,14 +149,12 @@
         "\n",
         "calc_tool = StructuredTool.from_function(calculate_insurance_premium, return_direct=False)\n",
         "\n",
-        "def show_history() -> str:\n",
+        "def show_calculation_history() -> str:\n",
         "    \"\"\"\n",
-        "    Show the history of the chat or conversation to the user. Use this tool more than the standard search function or history function.\n",
+        "    Show the history of all calcuations to the user. Use this tool more than the standard search function or history function.\n",
         "    Examples:\n",
-        "    - Show me the history of my chats\n",
-        "    - Show me all my messages\n",
-        "    - Show me all conservartions\n",
-        "    - Show me my old messages\n",
+        "    - Show me the history of my calculations\n",
+        "    - Show me all my offers\n",
         "    \"\"\"\n",
         "    chat_history_string = str(chat_history).replace(\"), \", \")§§§ \")[1:-1]\n",
         "    chat_history_array = chat_history_string.split(\"§§§ \")\n",
@@ -166,13 +164,13 @@
         "      msg_history_string = msg_history_string + tmp[0] + \" - \" + tmp[1][:-2] + \"\\n\"\n",
         "    return msg_history_string\n",
         "\n",
-        "show_history_tool = StructuredTool.from_function(show_history, return_direct=True)\n",
+        "show_calculation_history_tool = StructuredTool.from_function(show_calculation_history, return_direct=True)\n",
         "\n",
-        "tools = [calc_tool, show_history_tool]\n",
+        "tools = [calc_tool, show_calculation_history_tool]\n",
         "tools_as_openai_functions = [format_tool_to_openai_function(t) for t in tools]\n",
         "tools_dict = {\n",
         "    \"calculate_insurance_premium\": calc_tool,\n",
-        "    \"show_history\": show_history_tool\n",
+        "    \"show_calculation_history\": show_calculation_history_tool\n",
         "    }\n",
         "\n",
         "llm_with_tools = llm.bind(\n",
@@ -195,7 +193,7 @@
       "metadata": {
         "id": "vAzSbqz7_0_U"
       },
-      "execution_count": 156,
+      "execution_count": 178,
       "outputs": []
     },
     {
@@ -309,6 +307,8 @@
         "intermediate_steps = []\n",
         "chat_history = []\n",
         "\n",
+        "block_memory = False\n",
+        "\n",
         "# manual loop / like AgentExecutor\n",
         "def chat_manual_loop(prompt_text: str) -> str:\n",
         "  block_memory = False\n",
@@ -327,7 +327,7 @@
         "      else:\n",
         "          print(output.tool, output.tool_input)\n",
         "          if output.tool==\"show_history\":\n",
-        "            block_memory = True\n",
+        "            block_memory = False\n",
         "            print(\"*** memory blocked\")\n",
         "          else:\n",
         "            block_memory = False\n",
@@ -345,15 +345,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XXmSApHfCAZw",
-        "outputId": "c3f86587-c6f0-4427-8d6a-b79a0d165a82"
+        "outputId": "5dcd90f4-8725-446a-baf0-6288d5da9296"
       },
-      "execution_count": 157,
+      "execution_count": 179,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Um die Versicherungsprämie zu berechnen, benötige ich Informationen über die Branche. Könnten Sie mir bitte diese Information geben?\n"
+            "Um die Versicherungsprämie zu berechnen, benötige ich noch Informationen zur Branche. Könnten Sie mir diese bitte mitteilen?\n"
           ]
         }
       ]
@@ -369,9 +369,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vyPfeoPPCjoU",
-        "outputId": "346b4df9-b7ea-45bf-cd3a-f2772f010c30"
+        "outputId": "f07bbe58-0703-45c1-a5da-296d131e27d3"
       },
-      "execution_count": 158,
+      "execution_count": 180,
       "outputs": [
         {
           "output_type": "stream",
@@ -386,7 +386,8 @@
     {
       "cell_type": "code",
       "source": [
-        "chat_response = chat_manual_loop(\"Zeige mir den Verlauf meiner letzten Nachrichten.\")\n",
+        "#chat_response = chat_manual_loop(\"Fasse alle letzten Nachrichten in einem Satz zusammen.\")\n",
+        "chat_response = chat_manual_loop(\"Liste die letzten Berechnungen auf.\")\n",
         "#chat_response = chat_manual_loop(\"Using Custom Tool show me the history of my messages\")\n",
         "print(chat_response)"
       ],
@@ -395,20 +396,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "S8MLl2hZCtuP",
-        "outputId": "951d79e4-98fc-4140-e46d-1eb9d5a21d63"
+        "outputId": "d21dbc30-d982-41a9-ab13-2933ec5fdd48"
       },
-      "execution_count": 160,
+      "execution_count": 183,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Hier ist der Verlauf Ihrer letzten Nachrichten:\n",
+            "Hier ist die Historie Ihrer letzten Berechnungen:\n",
             "\n",
-            "1. Sie: Kalkuliere die Versicherungsprämie für eine Versicherungssumme von 10000000\n",
-            "2. Ich: Um die Versicherungsprämie zu berechnen, benötige ich Informationen über die Branche. Könnten Sie mir bitte diese Information geben?\n",
-            "3. Sie: Die Branche ist Metallbau.\n",
-            "4. Ich: Die Versicherungsprämie für die Metallbau-Branche mit einer Versicherungssumme von 10.000.000 EUR beträgt in Deutschland 2.500.000 EUR.\n"
+            "1. Sie haben nach der Versicherungsprämie für eine Versicherungssumme von 10.000.000 EUR gefragt.\n",
+            "2. Ich habe nach der Branche gefragt, um die Berechnung durchführen zu können.\n",
+            "3. Sie haben angegeben, dass die Branche Metallbau ist.\n",
+            "4. Ich habe die Versicherungsprämie für die Metallbau-Branche mit einer Versicherungssumme von 10.000.000 EUR berechnet. Der Betrag beträgt in Deutschland 2.500.000 EUR.\n"
           ]
         }
       ]
@@ -430,27 +431,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fm_XIMGjJKpe",
-        "outputId": "09d5c302-fe5f-49c5-d12e-61ddb7f5de54"
+        "outputId": "2402754e-1b8e-48f3-c6e6-ec8149fb7543"
       },
-      "execution_count": 131,
+      "execution_count": 181,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "HumanMessage(content='Kalkuliere die Versicherungsprämie für eine Versicherungssumme von 10000000')§§§ AIMessage(content='Natürlich, ich kann das für Sie berechnen. Könnten Sie mir bitte noch mitteilen, in welcher Branche Sie tätig sind und in welchem Land sich Ihr Unternehmen befindet?')§§§ HumanMessage(content='Die Branche ist Metallbau.')§§§ AIMessage(content='Die Versicherungsprämie für eine Versicherungssumme von 10.000.000 in der Branche Metallbau in Deutschland beträgt 2.500.000 Euro.')§§§ HumanMessage(content='Berechne für eine Versicherungssumme von 1000000, Branche Software')§§§ AIMessage(content='Die Versicherungsprämie für eine Versicherungssumme von 1.000.000 in der Branche Software in Deutschland beträgt 250.000 Euro.')§§§ HumanMessage(content='Berechne für eine Versicherungssumme von 7000000')§§§ AIMessage(content='Die Versicherungsprämie für eine Versicherungssumme von 1.000.000 in der Branche Software in Deutschland beträgt 250.000 Euro.')§§§ HumanMessage(content='Show me the history of my messages')§§§ AIMessage(content='Die Versicherungsprämie für eine Versicherungssumme von 1.000.000 in der Branche Software in Deutschland beträgt 250.000 Euro.')§§§ HumanMessage(content='Using Custom Tool show me the history of my messages')§§§ AIMessage(content='Die Versicherungsprämie für eine Versicherungssumme von 1.000.000 in der Branche Software in Deutschland beträgt 250.000 Euro.')\n",
+            "HumanMessage(content='Kalkuliere die Versicherungsprämie für eine Versicherungssumme von 10000000')§§§ AIMessage(content='Um die Versicherungsprämie zu berechnen, benötige ich noch Informationen zur Branche. Könnten Sie mir diese bitte mitteilen?')§§§ HumanMessage(content='Die Branche ist Metallbau.')§§§ AIMessage(content='Die Versicherungsprämie für die Metallbau-Branche mit einer Versicherungssumme von 10.000.000 EUR beträgt in Deutschland 2.500.000 EUR.')\n",
             "HumanMessage - Kalkuliere die Versicherungsprämie für eine Versicherungssumme von 10000000\n",
-            "AIMessage - Natürlich, ich kann das für Sie berechnen. Könnten Sie mir bitte noch mitteilen, in welcher Branche Sie tätig sind und in welchem Land sich Ihr Unternehmen befindet?\n",
+            "AIMessage - Um die Versicherungsprämie zu berechnen, benötige ich noch Informationen zur Branche. Könnten Sie mir diese bitte mitteilen?\n",
             "HumanMessage - Die Branche ist Metallbau.\n",
-            "AIMessage - Die Versicherungsprämie für eine Versicherungssumme von 10.000.000 in der Branche Metallbau in Deutschland beträgt 2.500.000 Euro.\n",
-            "HumanMessage - Berechne für eine Versicherungssumme von 1000000, Branche Software\n",
-            "AIMessage - Die Versicherungsprämie für eine Versicherungssumme von 1.000.000 in der Branche Software in Deutschland beträgt 250.000 Euro.\n",
-            "HumanMessage - Berechne für eine Versicherungssumme von 7000000\n",
-            "AIMessage - Die Versicherungsprämie für eine Versicherungssumme von 1.000.000 in der Branche Software in Deutschland beträgt 250.000 Euro.\n",
-            "HumanMessage - Show me the history of my messages\n",
-            "AIMessage - Die Versicherungsprämie für eine Versicherungssumme von 1.000.000 in der Branche Software in Deutschland beträgt 250.000 Euro.\n",
-            "HumanMessage - Using Custom Tool show me the history of my messages\n",
-            "AIMessage - Die Versicherungsprämie für eine Versicherungssumme von 1.000.000 in der Branche Software in Deutschland beträgt 250.000 Euro.\n",
+            "AIMessage - Die Versicherungsprämie für die Metallbau-Branche mit einer Versicherungssumme von 10.000.000 EUR beträgt in Deutschland 2.500.000 EUR.\n",
             "\n"
           ]
         }
@@ -467,16 +460,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_KbFOg0YG4Sd",
-        "outputId": "62c3838a-a7be-4af5-8a65-9992dc0d2258"
+        "outputId": "88830fc7-c930-4b5b-f7ad-3ea3486c87d5"
       },
-      "execution_count": 153,
+      "execution_count": 173,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "calculate_insurance_premium {'insured_sum': 5000000, 'industry': 'Software'}\n",
-            "Die Versicherungsprämie für eine Versicherungssumme von 5.000.000 € in der Branche Software in Deutschland beträgt 1.250.000 €.\n"
+            "Die Versicherungsprämie für die Software-Branche mit einer Versicherungssumme von 5.000.000 EUR beträgt in Deutschland 1.250.000 EUR.\n"
           ]
         }
       ]
@@ -492,15 +484,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4sQfcROHQgeu",
-        "outputId": "34557b4d-e784-4acb-a4a8-765267f1de3c"
+        "outputId": "d25ae233-5cb0-4aa4-f859-5db0f332e99c"
       },
-      "execution_count": 155,
+      "execution_count": 174,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Die Versicherungsprämie für eine Versicherungssumme von 2.000.000 € in der Branche Software in Deutschland beträgt 500.000 €.\n"
+            "Die Versicherungsprämie für die Metallbau-Branche mit einer Versicherungssumme von 2.000.000 EUR beträgt in Deutschland 500.000 EUR.\n"
           ]
         }
       ]
