--- a/Langchain-Agent-Insurance.ipynb
+++ b/Langchain-Agent-Insurance.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOUW6WcSlHTqNgx7IWYNriu",
+      "authorship_tag": "ABX9TyPd68iVo73h9Q5M1rx+midE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -203,7 +203,7 @@
       "metadata": {
         "id": "vAzSbqz7_0_U"
       },
-      "execution_count": 196,
+      "execution_count": 206,
       "outputs": []
     },
     {
@@ -324,7 +324,7 @@
         "  block_memory = False\n",
         "  while True:\n",
         "      output = agent.invoke({\n",
-        "          \"input\": prompt_text + \"\\nGib anschliessend einen Tipp zur Nutzung dieses Agents aus.\",\n",
+        "          \"input\": prompt_text, # + \"\\nGib anschliessend einen Tipp zur Nutzung dieses Agents aus.\",\n",
         "          \"intermediate_steps\": intermediate_steps,\n",
         "          \"chat_history\": chat_history\n",
         "      })\n",
@@ -345,6 +345,7 @@
         "          observation = tool.run(output.tool_input)\n",
         "          intermediate_steps.append((output, observation))\n",
         "  block_memory == False\n",
+        "  result = result + \"\\n\\n\" + show_hints();\n",
         "  return result\n",
         "\n",
         "chat_response = chat_manual_loop(\"Kalkuliere die Versicherungsprämie für eine Versicherungssumme von 10000000\")\n",
@@ -355,19 +356,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XXmSApHfCAZw",
-        "outputId": "a69b5793-5df8-4179-ff55-6476d864a6dd"
+        "outputId": "532077d2-6c06-4aa1-8aa6-6401aa6c1b01"
       },
-      "execution_count": 197,
+      "execution_count": 210,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "calculate_insurance_premium {'insured_sum': 10000000, 'currency': 'EUR', 'industry': 'construction'}\n",
-            "show_hints {}\n",
-            "Die Versicherungsprämie für eine Versicherungssumme von 10000000 EUR in der Baubranche beträgt 2500000.0 EUR (für Deutschland).\n",
+            "Um die Versicherungsprämie zu berechnen, benötige ich weitere Informationen. Könnten Sie mir bitte die Währung, die Branche und das Land (falls nicht Deutschland) angeben?\n",
             "\n",
-            "Tipp zur Nutzung dieses Agents: Sie können nach allen Kundennamen und Prämien fragen, verwenden Sie dazu das CSV-Format und ';' als Trennzeichen.\n"
+            "Hint: Ask 'Show me all customer names and premiums, use CSV format and ; as delimiter' \n"
           ]
         }
       ]
@@ -383,17 +382,50 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vyPfeoPPCjoU",
-        "outputId": "a3bee83b-499c-43bf-cb81-75e19054bdbb"
+        "outputId": "8e0a6b39-ae28-4ec1-80a4-fe19f90988d1"
       },
-      "execution_count": 198,
+      "execution_count": 211,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Die Versicherungsprämie für eine Versicherungssumme von 10000000 EUR in der Metallbau-Branche beträgt 2500000.0 EUR (für Deutschland).\n",
+            "calculate_insurance_premium {'insured_sum': 10000000, 'currency': 'EUR', 'industry': 'Metallbau'}\n",
+            "Die Versicherungsprämie für eine Versicherungssumme von 10.000.000 EUR in der Metallbaubranche beträgt 2.500.000 EUR in Deutschland.\n",
             "\n",
-            "Tipp zur Nutzung dieses Agents: Sie können nach allen Kundennamen und Prämien fragen, verwenden Sie dazu das CSV-Format und ';' als Trennzeichen.\n"
+            "Hint: Ask 'Show me all customer names and premiums, use CSV format and ; as delimiter' \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "chat_response = chat_manual_loop(\"Show me all customer names and premiums, use CSV format and ; as delimiter\")\n",
+        "print(chat_response)"
+      ],
+      "metadata": {
+        "id": "-JRcWKwIZeML",
+        "outputId": "d3301c56-850c-49d0-ffb4-070b9ed9d336",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 213,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "calculate_insurance_premium {'insured_sum': 10000000, 'currency': 'USD', 'industry': 'Metallbau'}\n",
+            "show_calculation_history {}\n",
+            "Hier ist die Liste aller Kunden und Prämien in CSV-Format:\n",
+            "\n",
+            "Kunde;Prämie\n",
+            "Metallbau;2.500.000 EUR\n",
+            "Metallbau;2.500.000 USD\n",
+            "\n",
+            "Hint: Ask 'Show me all customer names and premiums, use CSV format and ; as delimiter' \n"
           ]
         }
       ]
@@ -443,30 +475,23 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 262
+          "base_uri": "https://localhost:8080/"
         },
         "id": "fm_XIMGjJKpe",
-        "outputId": "faf95fa8-2db1-4148-859c-5a5d82d60dc8"
+        "outputId": "452e1fad-b0ee-45da-b9ce-6a67dcd27317"
       },
-      "execution_count": 204,
+      "execution_count": 209,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "HumanMessage(content='Kalkuliere die Versicherungsprämie für eine Versicherungssumme von 10000000')§§§ AIMessage(content=\"Die Versicherungsprämie für eine Versicherungssumme von 10000000 EUR in der Baubranche beträgt 2500000.0 EUR (für Deutschland).\\n\\nTipp zur Nutzung dieses Agents: Sie können nach allen Kundennamen und Prämien fragen, verwenden Sie dazu das CSV-Format und ';' als Trennzeichen.\")§§§ HumanMessage(content='EUR, Die Branche ist Metallbau.')§§§ AIMessage(content=\"Die Versicherungsprämie für eine Versicherungssumme von 10000000 EUR in der Metallbau-Branche beträgt 2500000.0 EUR (für Deutschland).\\n\\nTipp zur Nutzung dieses Agents: Sie können nach allen Kundennamen und Prämien fragen, verwenden Sie dazu das CSV-Format und ';' als Trennzeichen.\")§§§ HumanMessage(content='Liste die letzten Berechnungen auf.')§§§ AIMessage(content=\"Hier sind die letzten Berechnungen:\\n\\n1. Versicherungsprämie für eine Versicherungssumme von 10000000 EUR in der Baubranche: 2500000.0 EUR (für Deutschland)\\n2. Versicherungsprämie für eine Versicherungssumme von 10000000 EUR in der Metallbau-Branche: 2500000.0 EUR (für Deutschland)\\n\\nTipp zur Nutzung dieses Agents: Sie können nach allen Kundennamen und Prämien fragen, verwenden Sie dazu das CSV-Format und ';' als Trennzeichen.\")§§§ HumanMessage(content='Berechne für Müller GmbH, Versicherungssumme von 5 MEUR, Branche Software')§§§ AIMessage(content=\"Die Versicherungsprämie für die Müller GmbH mit einer Versicherungssumme von 5 MEUR in der Software-Branche beträgt 2500000.0 EUR (für Deutschland).\\n\\nTipp zur Nutzung dieses Agents: Fragen Sie 'Zeigen Sie mir alle Kundennamen und Prämien, verwenden Sie das CSV-Format und ; als Trennzeichen'.\")§§§ HumanMessage(content='Berechne erneut, ändere die Versicherungssumme auf 2000000 EUR')§§§ AIMessage(content=\"Die Versicherungsprämie für eine Versicherungssumme von 2000000 EUR in der Baubranche beträgt 2500000.0 EUR (für Deutschland).\\n\\nTipp zur Nutzung dieses Agents: Fragen Sie 'Zeigen Sie mir alle Kundennamen und Prämien, verwenden Sie das CSV-Format und ; als Trennzeichen'.\")§§§ HumanMessage(content='Liste die letzten namentlich bekannten Kunden auf, bitte keine Dopplungen. Gib zusätzlich die angebotene Prämie an. Gib das Ergebnis im CSV-Format zurück, Trennzeichen ;')§§§ AIMessage(content=\"Hier sind die letzten namentlich bekannten Kunden und die angebotene Prämie:\\n\\n1. Müller GmbH; 2500000.0 EUR\\n\\nTipp zur Nutzung dieses Agents: Fragen Sie 'Zeigen Sie mir alle Kundennamen und Prämien, verwenden Sie das CSV-Format und ; als Trennzeichen'.\")\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "IndexError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-204-23d2d332b7c5>\u001b[0m in \u001b[0;36m<cell line: 5>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mchat_string\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mchat_history_array\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m   \u001b[0mtmp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mchat_string\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"(content='\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m   \u001b[0mmsg_history_string\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmsg_history_string\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mtmp\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\" - \"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mtmp\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\"\\n\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg_history_string\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+            "HumanMessage(content='Kalkuliere die Versicherungsprämie für eine Versicherungssumme von 10000000')§§§ AIMessage(content='Um die Versicherungsprämie zu berechnen, benötige ich weitere Informationen. Könnten Sie mir bitte die Währung, die Branche und das Land (falls nicht Deutschland) angeben?')§§§ HumanMessage(content='EUR, Die Branche ist Metallbau.')§§§ AIMessage(content='Die Versicherungsprämie für eine Versicherungssumme von 10.000.000 EUR in der Metallbaubranche beträgt 2.500.000 EUR (für Deutschland).')\n",
+            "HumanMessage - Kalkuliere die Versicherungsprämie für eine Versicherungssumme von 10000000\n",
+            "AIMessage - Um die Versicherungsprämie zu berechnen, benötige ich weitere Informationen. Könnten Sie mir bitte die Währung, die Branche und das Land (falls nicht Deutschland) angeben?\n",
+            "HumanMessage - EUR, Die Branche ist Metallbau.\n",
+            "AIMessage - Die Versicherungsprämie für eine Versicherungssumme von 10.000.000 EUR in der Metallbaubranche beträgt 2.500.000 EUR (für Deutschland).\n",
+            "\n"
           ]
         }
       ]
@@ -530,11 +555,11 @@
         "print(chat_response)"
       ],
       "metadata": {
-        "id": "WZw1sP6UWGPm",
-        "outputId": "9dba80a0-1419-4760-8365-e4aa61d0cbaa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "WZw1sP6UWGPm",
+        "outputId": "9dba80a0-1419-4760-8365-e4aa61d0cbaa"
       },
       "execution_count": 202,
       "outputs": [
