--- a/Langchain-Agent-Insurance.ipynb
+++ b/Langchain-Agent-Insurance.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPzGSkvCm3UFXUFV7c2CRBA",
+      "authorship_tag": "ABX9TyMI4SOonCafmEEmFT1SyfaE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -206,32 +206,8 @@
       "metadata": {
         "id": "vAzSbqz7_0_U"
       },
-      "execution_count": 241,
+      "execution_count": 263,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "tool_names = [tool.name for tool in tools]\n",
-        "print(tool_names)"
-      ],
-      "metadata": {
-        "id": "KC1K__kNrAW-",
-        "outputId": "337ec73e-7740-436a-ccdc-44aca4c3af02",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 231,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "['calculate_insurance_premium']\n"
-          ]
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -339,6 +315,262 @@
     {
       "cell_type": "code",
       "source": [
+        "agent_kwargs = {\n",
+        "    \"extra_prompt_messages\": [MessagesPlaceholder(variable_name=\"chat_history\")],\n",
+        "}\n",
+        "memory = ConversationBufferMemory(memory_key=\"chat_history\", return_messages=True)\n",
+        "agent = initialize_agent(\n",
+        "    tools,\n",
+        "    llm,\n",
+        "    #agent=AgentType.OPENAI_FUNCTIONS,\n",
+        "    #agent=AgentType.ZERO_SHOT_REACT_DESCRIPTION,\n",
+        "    agent=AgentType.STRUCTURED_CHAT_ZERO_SHOT_REACT_DESCRIPTION,\n",
+        "    verbose=True,\n",
+        "    agent_kwargs=agent_kwargs,\n",
+        "    memory=memory,\n",
+        ")\n",
+        "langchain.debug = False"
+      ],
+      "metadata": {
+        "id": "O3f3lexwuBwv"
+      },
+      "execution_count": 269,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#agent.run(\"hi\")\n",
+        "#agent.run(\"My name is Bob\")\n",
+        "#agent.run(\"Wie lautet mein Name?\")\n",
+        "agent.run(\"Kalkuliere die Versicherungsprämie für eine Versicherungssumme von 10000000 EUR, Chemie\")\n",
+        "#agent.run(\"it is metal construction industry\")"
+      ],
+      "metadata": {
+        "id": "5y-tP0zduDZk",
+        "outputId": "9f433782-623d-4215-a79b-388c646edacb",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 497
+        }
+      },
+      "execution_count": 270,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "\n",
+            "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
+            "\u001b[32;1m\u001b[1;3mAction:\n",
+            "```\n",
+            "{\n",
+            "  \"action\": \"calculate_insurance_premium\",\n",
+            "  \"action_input\": {\n",
+            "    \"insured_sum\": 10000000,\n",
+            "    \"currency\": \"EUR\",\n",
+            "    \"industry\": \"Chemie\"\n",
+            "  }\n",
+            "}\n",
+            "```\u001b[0m\n",
+            "Observation: \u001b[36;1m\u001b[1;3m2500000.0 (for Germany)\u001b[0m\n",
+            "Thought:\u001b[32;1m\u001b[1;3mThe tool has provided the insurance premium for a sum of 10000000 EUR in the chemical industry in Germany. I will now provide this information to the user. \n",
+            "Action:\n",
+            "```\n",
+            "{\n",
+            "  \"action\": \"Final Answer\",\n",
+            "  \"action_input\": \"Die Versicherungsprämie für eine Versicherungssumme von 10000000 EUR in der Chemiebranche in Deutschland beträgt 2500000.0 EUR.\"\n",
+            "}\n",
+            "```\u001b[0m\n",
+            "\n",
+            "\u001b[1m> Finished chain.\u001b[0m\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Die Versicherungsprämie für eine Versicherungssumme von 10000000 EUR in der Chemiebranche in Deutschland beträgt 2500000.0 EUR.'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 270
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#print(agent.agent.llm_chain.prompt.template)\n",
+        "#print(dir(agent))\n",
+        "#print(textwrap.fill(str(dir(agent)), 80))\n",
+        "print(json.dumps(dir(agent.agent.llm_chain.prompt), sort_keys=False, indent=2))"
+      ],
+      "metadata": {
+        "id": "6slUA1oUuYh-",
+        "outputId": "0051bef6-d990-4546-d656-79cd5b686c43",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 272,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[\n",
+            "  \"Config\",\n",
+            "  \"InputType\",\n",
+            "  \"OutputType\",\n",
+            "  \"__abstractmethods__\",\n",
+            "  \"__add__\",\n",
+            "  \"__annotations__\",\n",
+            "  \"__class__\",\n",
+            "  \"__class_getitem__\",\n",
+            "  \"__class_vars__\",\n",
+            "  \"__config__\",\n",
+            "  \"__custom_root_type__\",\n",
+            "  \"__delattr__\",\n",
+            "  \"__dict__\",\n",
+            "  \"__dir__\",\n",
+            "  \"__doc__\",\n",
+            "  \"__eq__\",\n",
+            "  \"__exclude_fields__\",\n",
+            "  \"__fields__\",\n",
+            "  \"__fields_set__\",\n",
+            "  \"__format__\",\n",
+            "  \"__ge__\",\n",
+            "  \"__get_validators__\",\n",
+            "  \"__getattribute__\",\n",
+            "  \"__getitem__\",\n",
+            "  \"__getstate__\",\n",
+            "  \"__gt__\",\n",
+            "  \"__hash__\",\n",
+            "  \"__include_fields__\",\n",
+            "  \"__init__\",\n",
+            "  \"__init_subclass__\",\n",
+            "  \"__iter__\",\n",
+            "  \"__json_encoder__\",\n",
+            "  \"__le__\",\n",
+            "  \"__len__\",\n",
+            "  \"__lt__\",\n",
+            "  \"__module__\",\n",
+            "  \"__ne__\",\n",
+            "  \"__new__\",\n",
+            "  \"__or__\",\n",
+            "  \"__orig_bases__\",\n",
+            "  \"__parameters__\",\n",
+            "  \"__post_root_validators__\",\n",
+            "  \"__pre_root_validators__\",\n",
+            "  \"__pretty__\",\n",
+            "  \"__private_attributes__\",\n",
+            "  \"__reduce__\",\n",
+            "  \"__reduce_ex__\",\n",
+            "  \"__repr__\",\n",
+            "  \"__repr_args__\",\n",
+            "  \"__repr_name__\",\n",
+            "  \"__repr_str__\",\n",
+            "  \"__rich_repr__\",\n",
+            "  \"__ror__\",\n",
+            "  \"__schema_cache__\",\n",
+            "  \"__setattr__\",\n",
+            "  \"__setstate__\",\n",
+            "  \"__signature__\",\n",
+            "  \"__sizeof__\",\n",
+            "  \"__slots__\",\n",
+            "  \"__str__\",\n",
+            "  \"__subclasshook__\",\n",
+            "  \"__try_update_forward_refs__\",\n",
+            "  \"__validators__\",\n",
+            "  \"__weakref__\",\n",
+            "  \"_abatch_with_config\",\n",
+            "  \"_abc_impl\",\n",
+            "  \"_acall_with_config\",\n",
+            "  \"_atransform_stream_with_config\",\n",
+            "  \"_batch_with_config\",\n",
+            "  \"_calculate_keys\",\n",
+            "  \"_call_with_config\",\n",
+            "  \"_copy_and_set_values\",\n",
+            "  \"_decompose_class\",\n",
+            "  \"_enforce_dict_if_root\",\n",
+            "  \"_get_value\",\n",
+            "  \"_init_private_attributes\",\n",
+            "  \"_is_protocol\",\n",
+            "  \"_iter\",\n",
+            "  \"_lc_kwargs\",\n",
+            "  \"_merge_partial_and_user_variables\",\n",
+            "  \"_prompt_type\",\n",
+            "  \"_transform_stream_with_config\",\n",
+            "  \"abatch\",\n",
+            "  \"ainvoke\",\n",
+            "  \"append\",\n",
+            "  \"astream\",\n",
+            "  \"astream_log\",\n",
+            "  \"atransform\",\n",
+            "  \"batch\",\n",
+            "  \"bind\",\n",
+            "  \"config_schema\",\n",
+            "  \"config_specs\",\n",
+            "  \"configurable_alternatives\",\n",
+            "  \"configurable_fields\",\n",
+            "  \"construct\",\n",
+            "  \"copy\",\n",
+            "  \"dict\",\n",
+            "  \"extend\",\n",
+            "  \"format\",\n",
+            "  \"format_messages\",\n",
+            "  \"format_prompt\",\n",
+            "  \"from_messages\",\n",
+            "  \"from_orm\",\n",
+            "  \"from_role_strings\",\n",
+            "  \"from_strings\",\n",
+            "  \"from_template\",\n",
+            "  \"get_lc_namespace\",\n",
+            "  \"input_schema\",\n",
+            "  \"input_types\",\n",
+            "  \"input_variables\",\n",
+            "  \"invoke\",\n",
+            "  \"is_lc_serializable\",\n",
+            "  \"json\",\n",
+            "  \"lc_attributes\",\n",
+            "  \"lc_id\",\n",
+            "  \"lc_secrets\",\n",
+            "  \"map\",\n",
+            "  \"messages\",\n",
+            "  \"output_parser\",\n",
+            "  \"output_schema\",\n",
+            "  \"parse_file\",\n",
+            "  \"parse_obj\",\n",
+            "  \"parse_raw\",\n",
+            "  \"partial\",\n",
+            "  \"partial_variables\",\n",
+            "  \"save\",\n",
+            "  \"schema\",\n",
+            "  \"schema_json\",\n",
+            "  \"stream\",\n",
+            "  \"to_json\",\n",
+            "  \"to_json_not_implemented\",\n",
+            "  \"transform\",\n",
+            "  \"update_forward_refs\",\n",
+            "  \"validate\",\n",
+            "  \"validate_input_variables\",\n",
+            "  \"validate_variable_names\",\n",
+            "  \"with_config\",\n",
+            "  \"with_fallbacks\",\n",
+            "  \"with_retry\"\n",
+            "]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "langchain.debug = False\n",
         "\n",
         "intermediate_steps = []\n",
@@ -379,177 +611,10 @@
         "print(chat_response)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 344
-        },
-        "id": "XXmSApHfCAZw",
-        "outputId": "02c6b62e-0d84-42b6-d04a-ac5a436ca900"
+        "id": "XXmSApHfCAZw"
       },
-      "execution_count": 236,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-236-bb0b3622dbd8>\u001b[0m in \u001b[0;36m<cell line: 37>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     35\u001b[0m   \u001b[0;32mreturn\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 37\u001b[0;31m \u001b[0mchat_response\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mchat_manual_loop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Kalkuliere die Versicherungsprämie für eine Versicherungssumme von 10000000\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     38\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mchat_response\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-236-bb0b3622dbd8>\u001b[0m in \u001b[0;36mchat_manual_loop\u001b[0;34m(prompt_text)\u001b[0m\n\u001b[1;32m     10\u001b[0m   \u001b[0mblock_memory\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m   \u001b[0;32mwhile\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m       output = agent.run({\n\u001b[0m\u001b[1;32m     13\u001b[0m           \u001b[0;34m\"input\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mprompt_text\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;31m# + \"\\nGib anschliessend einen Tipp zur Nutzung dieses Agents aus.\",\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m           \u001b[0;34m\"intermediate_steps\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mintermediate_steps\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mAttributeError\u001b[0m: 'LLMSingleActionAgent' object has no attribute 'run'"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#print(agent.agent.llm_chain.prompt.template)\n",
-        "#print(dir(agent))\n",
-        "#print(textwrap.fill(str(dir(agent)), 80))\n",
-        "print(json.dumps(dir(agent), sort_keys=False, indent=2))"
-      ],
-      "metadata": {
-        "id": "TBHvAGNXobez",
-        "outputId": "cebcb5c4-ea5f-4a3f-d25b-34efa6b5d078",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 229,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[\n",
-            "  \"Config\",\n",
-            "  \"InputType\",\n",
-            "  \"OutputType\",\n",
-            "  \"__abstractmethods__\",\n",
-            "  \"__annotations__\",\n",
-            "  \"__class__\",\n",
-            "  \"__class_getitem__\",\n",
-            "  \"__class_vars__\",\n",
-            "  \"__config__\",\n",
-            "  \"__custom_root_type__\",\n",
-            "  \"__delattr__\",\n",
-            "  \"__dict__\",\n",
-            "  \"__dir__\",\n",
-            "  \"__doc__\",\n",
-            "  \"__eq__\",\n",
-            "  \"__exclude_fields__\",\n",
-            "  \"__fields__\",\n",
-            "  \"__fields_set__\",\n",
-            "  \"__format__\",\n",
-            "  \"__ge__\",\n",
-            "  \"__get_validators__\",\n",
-            "  \"__getattribute__\",\n",
-            "  \"__getstate__\",\n",
-            "  \"__gt__\",\n",
-            "  \"__hash__\",\n",
-            "  \"__include_fields__\",\n",
-            "  \"__init__\",\n",
-            "  \"__init_subclass__\",\n",
-            "  \"__iter__\",\n",
-            "  \"__json_encoder__\",\n",
-            "  \"__le__\",\n",
-            "  \"__lt__\",\n",
-            "  \"__module__\",\n",
-            "  \"__ne__\",\n",
-            "  \"__new__\",\n",
-            "  \"__or__\",\n",
-            "  \"__orig_bases__\",\n",
-            "  \"__parameters__\",\n",
-            "  \"__post_root_validators__\",\n",
-            "  \"__pre_root_validators__\",\n",
-            "  \"__pretty__\",\n",
-            "  \"__private_attributes__\",\n",
-            "  \"__reduce__\",\n",
-            "  \"__reduce_ex__\",\n",
-            "  \"__repr__\",\n",
-            "  \"__repr_args__\",\n",
-            "  \"__repr_name__\",\n",
-            "  \"__repr_str__\",\n",
-            "  \"__rich_repr__\",\n",
-            "  \"__ror__\",\n",
-            "  \"__schema_cache__\",\n",
-            "  \"__setattr__\",\n",
-            "  \"__setstate__\",\n",
-            "  \"__signature__\",\n",
-            "  \"__sizeof__\",\n",
-            "  \"__slots__\",\n",
-            "  \"__str__\",\n",
-            "  \"__subclasshook__\",\n",
-            "  \"__try_update_forward_refs__\",\n",
-            "  \"__validators__\",\n",
-            "  \"__weakref__\",\n",
-            "  \"_abatch_with_config\",\n",
-            "  \"_abc_impl\",\n",
-            "  \"_acall_with_config\",\n",
-            "  \"_atransform\",\n",
-            "  \"_atransform_stream_with_config\",\n",
-            "  \"_batch_with_config\",\n",
-            "  \"_calculate_keys\",\n",
-            "  \"_call_with_config\",\n",
-            "  \"_copy_and_set_values\",\n",
-            "  \"_decompose_class\",\n",
-            "  \"_enforce_dict_if_root\",\n",
-            "  \"_get_value\",\n",
-            "  \"_init_private_attributes\",\n",
-            "  \"_is_protocol\",\n",
-            "  \"_iter\",\n",
-            "  \"_lc_kwargs\",\n",
-            "  \"_transform\",\n",
-            "  \"_transform_stream_with_config\",\n",
-            "  \"abatch\",\n",
-            "  \"ainvoke\",\n",
-            "  \"astream\",\n",
-            "  \"astream_log\",\n",
-            "  \"atransform\",\n",
-            "  \"batch\",\n",
-            "  \"bind\",\n",
-            "  \"config_schema\",\n",
-            "  \"config_specs\",\n",
-            "  \"configurable_alternatives\",\n",
-            "  \"configurable_fields\",\n",
-            "  \"construct\",\n",
-            "  \"copy\",\n",
-            "  \"dict\",\n",
-            "  \"first\",\n",
-            "  \"from_orm\",\n",
-            "  \"get_lc_namespace\",\n",
-            "  \"input_schema\",\n",
-            "  \"invoke\",\n",
-            "  \"is_lc_serializable\",\n",
-            "  \"json\",\n",
-            "  \"last\",\n",
-            "  \"lc_attributes\",\n",
-            "  \"lc_id\",\n",
-            "  \"lc_secrets\",\n",
-            "  \"map\",\n",
-            "  \"middle\",\n",
-            "  \"output_schema\",\n",
-            "  \"parse_file\",\n",
-            "  \"parse_obj\",\n",
-            "  \"parse_raw\",\n",
-            "  \"schema\",\n",
-            "  \"schema_json\",\n",
-            "  \"steps\",\n",
-            "  \"stream\",\n",
-            "  \"to_json\",\n",
-            "  \"to_json_not_implemented\",\n",
-            "  \"transform\",\n",
-            "  \"update_forward_refs\",\n",
-            "  \"validate\",\n",
-            "  \"with_config\",\n",
-            "  \"with_fallbacks\",\n",
-            "  \"with_retry\"\n",
-            "]\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
